salesforce/force-app/main/default/objects/D360_Proposed_Action__c/D360_Proposed_Action__c.object-meta.xml
<CustomObject>
    <description>Human-reviewable action proposed by the goal agent.</description>
    <label>D360 Proposed Action</label>
    <nameField>
        <label>Proposed Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>D360 Proposed Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>