salesforce/force-app/main/default/objects/D360_Proposed_Action__c/fields/Action_Status__c.field-meta.xml
<CustomField>
    <fullName>Action_Status__c</fullName>
    <label>Action Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>false</default><label>Draft</label></value>
            <value><fullName>Waiting Approval</fullName><default>true</default><label>Waiting Approval</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Executed</fullName><default>false</default><label>Executed</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>