salesforce/force-app/main/default/objects/D360_Proposed_Action__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Create Task</fullName><default>false</default><label>Create Task</label></value>
            <value><fullName>Draft Email</fullName><default>false</default><label>Draft Email</label></value>
            <value><fullName>Escalate Case</fullName><default>false</default><label>Escalate Case</label></value>
            <value><fullName>Create Segment</fullName><default>false</default><label>Create Segment</label></value>
            <value><fullName>Publish Segment</fullName><default>false</default><label>Publish Segment</label></value>
            <value><fullName>Create Activation Draft</fullName><default>false</default><label>Create Activation Draft</label></value>
            <value><fullName>Slack Approval</fullName><default>false</default><label>Slack Approval</label></value>
            <value><fullName>Impact Snapshot</fullName><default>false</default><label>Impact Snapshot</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>