salesforce/force-app/main/default/objects/D360_Proposed_Action__c/fields/Draft_Content__c.field-meta.xml
<CustomField>
    <fullName>Draft_Content__c</fullName>
    <label>Draft Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>