salesforce/force-app/main/default/objects/D360_Proposed_Action__c/fields/Expected_Impact__c.field-meta.xml
<CustomField>
    <fullName>Expected_Impact__c</fullName>
    <label>Expected Impact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>