salesforce/force-app/main/default/objects/D360_Proposed_Action__c/fields/Needs_Approval__c.field-meta.xml
<CustomField>
    <fullName>Needs_Approval__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Needs Approval</label>
    <type>Checkbox</type>
</CustomField>