salesforce/force-app/main/default/objects/D360_Proposed_Action__c/fields/Recovery_Account__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recovery Account</label>
    <referenceTo>D360_Recovery_Account__c</referenceTo>
    <relationshipLabel>Proposed Actions</relationshipLabel>
    <relationshipName>Proposed_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>