salesforce/force-app/main/default/objects/D360_Proposed_Action__c/fields/Target_System__c.field-meta.xml
<CustomField>
    <fullName>Target_System__c</fullName>
    <label>Target System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Data360</fullName><default>false</default><label>Data360</label></value>
            <value><fullName>Sales Cloud</fullName><default>true</default><label>Sales Cloud</label></value>
            <value><fullName>Service Cloud</fullName><default>false</default><label>Service Cloud</label></value>
            <value><fullName>Marketing Cloud</fullName><default>false</default><label>Marketing Cloud</label></value>
            <value><fullName>Slack</fullName><default>false</default><label>Slack</label></value>
            <value><fullName>Tableau</fullName><default>false</default><label>Tableau</label></value>
            <value><fullName>Agentforce</fullName><default>false</default><label>Agentforce</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>