salesforce/force-app/main/default/objects/D360_Proposed_Action__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Action_Type__c</columns>
    <columns>Target_System__c</columns>
    <columns>Action_Status__c</columns>
    <columns>Risk_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Proposed Actions</label>
</ListView>